CertQualidade/src/parser/RecParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g 2012-07-09 11:49:32

  package parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class RecParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AuxArgList", "FunctionRecordArrayEmpty", "FRA3", "FRA2", "FRA1", "FRAFieldList", "FRAArgList", "TypeIdNil", "TypeIdInteger", "TypeIdString", "TypeId", "AuxExpList", "RelExpEmpty", "RelExpMoreEqual", "RelExpLessEqual", "RelExpDiferent", "RelExpMore", "RelExpLess", "DFunDec", "DVarDec", "DTyDec", "TTypeId", "TArrayOf", "TFieldList", "FIfThenElse", "FIfThen", "FLvalue", "FLet", "FBreak", "FFor", "FWhile", "FNeg", "FExpList", "FString", "FInteger", "FNil", "Aux3", "TyDec", "ExpListEmpty", "ExpList", "Prog", "Aux22", "Aux21", "AritExp", "AuxFRA1", "ExpOR", "AuxFRA24", "AuxFRA23", "AuxFRA22", "AuxFRA21", "ExpORPrEmpty", "ExpORPr", "FieldListEmpty", "FieldListEqual", "FieldListDP", "ExpAND", "TermPrEmpty", "TermPrEqual", "TermPrNeg", "TermPrPlus", "Aux4", "DecList", "FactorPrEmpty", "Div", "Times", "ExpANDPrEmpty", "ExpANDPr", "IntFieldList3", "IntFieldList2", "IntFieldList1", "Aux12", "Aux11", "FunDec2", "FunDec1", "AuxFieldList", "ArgListEmpty", "ArgList", "Exp", "Term", "VarDec2", "VarDec1", "LValue", "INT", "STRING", "ID", "LETTER", "DIGIT", "NESTED_ML_COMMENT", "WHITESPACE", "'|'", "'&'", "'<'", "'>'", "'<>'", "'<='", "'>='", "'+'", "'-'", "'='", "'*'", "'/'", "'nil'", "'('", "')'", "'while'", "'do'", "'for'", "':='", "'to'", "'break'", "'let'", "'in'", "'end'", "'if'", "'then'", "'else'", "'type'", "'{'", "'}'", "'array of'", "':'", "','", "'['", "']'", "'of'", "'var'", "'function'", "'.'", "';'"
    };
    public static final int ExpOR=55;
    public static final int DTyDec=30;
    public static final int ExpList=49;
    public static final int LETTER=95;
    public static final int FactorPrEmpty=72;
    public static final int EOF=-1;
    public static final int FBreak=38;
    public static final int ArgListEmpty=85;
    public static final int ExpANDPr=76;
    public static final int FFor=39;
    public static final int FRA2=13;
    public static final int FRA1=14;
    public static final int Term=88;
    public static final int FRA3=12;
    public static final int TypeIdNil=17;
    public static final int RelExpLessEqual=24;
    public static final int TypeIdInteger=18;
    public static final int T__99=99;
    public static final int FunDec2=82;
    public static final int FunDec1=83;
    public static final int T__138=138;
    public static final int T__137=137;
    public static final int T__136=136;
    public static final int AritExp=53;
    public static final int LValue=91;
    public static final int NESTED_ML_COMMENT=97;
    public static final int DFunDec=28;
    public static final int AuxFRA21=59;
    public static final int AuxFRA22=58;
    public static final int AuxFRA23=57;
    public static final int AuxFRA24=56;
    public static final int WHITESPACE=98;
    public static final int INT=92;
    public static final int FIfThenElse=34;
    public static final int T__126=126;
    public static final int RelExpMore=26;
    public static final int T__125=125;
    public static final int AuxFRA1=54;
    public static final int T__128=128;
    public static final int Prog=50;
    public static final int T__127=127;
    public static final int Aux3=46;
    public static final int T__129=129;
    public static final int FieldListEmpty=62;
    public static final int Times=74;
    public static final int FNeg=41;
    public static final int FWhile=40;
    public static final int T__130=130;
    public static final int T__131=131;
    public static final int T__132=132;
    public static final int T__133=133;
    public static final int Aux4=70;
    public static final int T__134=134;
    public static final int T__135=135;
    public static final int TermPrEqual=67;
    public static final int FieldListDP=64;
    public static final int T__118=118;
    public static final int TTypeId=31;
    public static final int T__119=119;
    public static final int AuxArgList=10;
    public static final int T__116=116;
    public static final int T__117=117;
    public static final int T__114=114;
    public static final int T__115=115;
    public static final int T__124=124;
    public static final int T__123=123;
    public static final int T__122=122;
    public static final int TermPrEmpty=66;
    public static final int T__121=121;
    public static final int T__120=120;
    public static final int TypeId=20;
    public static final int IntFieldList2=78;
    public static final int FLet=37;
    public static final int IntFieldList1=79;
    public static final int IntFieldList3=77;
    public static final int ID=94;
    public static final int AuxFieldList=84;
    public static final int ExpAND=65;
    public static final int ExpListEmpty=48;
    public static final int RelExpLess=27;
    public static final int DecList=71;
    public static final int ExpORPrEmpty=60;
    public static final int TermPrPlus=69;
    public static final int T__107=107;
    public static final int T__108=108;
    public static final int AuxExpList=21;
    public static final int T__109=109;
    public static final int RelExpDiferent=25;
    public static final int T__103=103;
    public static final int T__104=104;
    public static final int T__105=105;
    public static final int T__106=106;
    public static final int T__111=111;
    public static final int T__110=110;
    public static final int T__113=113;
    public static final int T__112=112;
    public static final int DIGIT=96;
    public static final int FLvalue=36;
    public static final int TFieldList=33;
    public static final int ExpANDPrEmpty=75;
    public static final int TArrayOf=32;
    public static final int Div=73;
    public static final int Aux12=80;
    public static final int Aux11=81;
    public static final int Exp=87;
    public static final int TyDec=47;
    public static final int T__102=102;
    public static final int FExpList=42;
    public static final int T__101=101;
    public static final int VarDec1=90;
    public static final int RelExpMoreEqual=23;
    public static final int FieldListEqual=63;
    public static final int T__100=100;
    public static final int VarDec2=89;
    public static final int FIfThen=35;
    public static final int DVarDec=29;
    public static final int Aux21=52;
    public static final int TypeIdString=19;
    public static final int TermPrNeg=68;
    public static final int FString=43;
    public static final int ArgList=86;
    public static final int FNil=45;
    public static final int ExpORPr=61;
    public static final int Aux22=51;
    public static final int FRAFieldList=15;
    public static final int FunctionRecordArrayEmpty=11;
    public static final int FInteger=44;
    public static final int RelExpEmpty=22;
    public static final int FRAArgList=16;
    public static final int STRING=93;

    // delegates
    // delegators


        public RecParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public RecParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return RecParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:15:1: prog : exp -> ^( Prog exp ) ;
    public final RecParser.prog_return prog() throws RecognitionException {
        RecParser.prog_return retval = new RecParser.prog_return();
        retval.start = input.LT(1);

        Tree root_0 = null;

        RecParser.exp_return exp1 = null;


        RewriteRuleSubtreeStream stream_exp=new RewriteRuleSubtreeStream(adaptor,"rule exp");
        try {
            // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:15:8: ( exp -> ^( Prog exp ) )
            // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:15:10: exp
            {
            pushFollow(FOLLOW_exp_in_prog57);
            exp1=exp();

            state._fsp--;

            stream_exp.add(exp1.getTree());


            // AST REWRITE
            // elements: exp
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Tree)adaptor.nil();
            // 15:16: -> ^( Prog exp )
            {
                // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:15:19: ^( Prog exp )
                {
                Tree root_1 = (Tree)adaptor.nil();
                root_1 = (Tree)adaptor.becomeRoot((Tree)adaptor.create(Prog, "Prog"), root_1);

                adaptor.addChild(root_1, stream_exp.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "prog"

    public static class exp_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "exp"
    // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:17:1: exp : e1= expOR e2= expORPr -> ^( Exp $e1 $e2) ;
    public final RecParser.exp_return exp() throws RecognitionException {
        RecParser.exp_return retval = new RecParser.exp_return();
        retval.start = input.LT(1);

        Tree root_0 = null;

        RecParser.expOR_return e1 = null;

        RecParser.expORPr_return e2 = null;


        RewriteRuleSubtreeStream stream_expORPr=new RewriteRuleSubtreeStream(adaptor,"rule expORPr");
        RewriteRuleSubtreeStream stream_expOR=new RewriteRuleSubtreeStream(adaptor,"rule expOR");
        try {
            // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:17:7: (e1= expOR e2= expORPr -> ^( Exp $e1 $e2) )
            // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:17:9: e1= expOR e2= expORPr
            {
            pushFollow(FOLLOW_expOR_in_exp82);
            e1=expOR();

            state._fsp--;

            stream_expOR.add(e1.getTree());
            pushFollow(FOLLOW_expORPr_in_exp86);
            e2=expORPr();

            state._fsp--;

            stream_expORPr.add(e2.getTree());


            // AST REWRITE
            // elements: e1, e2
            // token labels: 
            // rule labels: retval, e1, e2
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_e1=new RewriteRuleSubtreeStream(adaptor,"rule e1",e1!=null?e1.tree:null);
            RewriteRuleSubtreeStream stream_e2=new RewriteRuleSubtreeStream(adaptor,"rule e2",e2!=null?e2.tree:null);

            root_0 = (Tree)adaptor.nil();
            // 17:30: -> ^( Exp $e1 $e2)
            {
                // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:17:33: ^( Exp $e1 $e2)
                {
                Tree root_1 = (Tree)adaptor.nil();
                root_1 = (Tree)adaptor.becomeRoot((Tree)adaptor.create(Exp, "Exp"), root_1);

                adaptor.addChild(root_1, stream_e1.nextTree());
                adaptor.addChild(root_1, stream_e2.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "exp"

    public static class expOR_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expOR"
    // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:19:1: expOR : e1= expAND e2= expANDPr -> ^( ExpOR $e1 $e2) ;
    public final RecParser.expOR_return expOR() throws RecognitionException {
        RecParser.expOR_return retval = new RecParser.expOR_return();
        retval.start = input.LT(1);

        Tree root_0 = null;

        RecParser.expAND_return e1 = null;

        RecParser.expANDPr_return e2 = null;


        RewriteRuleSubtreeStream stream_expANDPr=new RewriteRuleSubtreeStream(adaptor,"rule expANDPr");
        RewriteRuleSubtreeStream stream_expAND=new RewriteRuleSubtreeStream(adaptor,"rule expAND");
        try {
            // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:19:8: (e1= expAND e2= expANDPr -> ^( ExpOR $e1 $e2) )
            // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:19:10: e1= expAND e2= expANDPr
            {
            pushFollow(FOLLOW_expAND_in_expOR113);
            e1=expAND();

            state._fsp--;

            stream_expAND.add(e1.getTree());
            pushFollow(FOLLOW_expANDPr_in_expOR117);
            e2=expANDPr();

            state._fsp--;

            stream_expANDPr.add(e2.getTree());


            // AST REWRITE
            // elements: e2, e1
            // token labels: 
            // rule labels: retval, e1, e2
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_e1=new RewriteRuleSubtreeStream(adaptor,"rule e1",e1!=null?e1.tree:null);
            RewriteRuleSubtreeStream stream_e2=new RewriteRuleSubtreeStream(adaptor,"rule e2",e2!=null?e2.tree:null);

            root_0 = (Tree)adaptor.nil();
            // 19:33: -> ^( ExpOR $e1 $e2)
            {
                // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:19:36: ^( ExpOR $e1 $e2)
                {
                Tree root_1 = (Tree)adaptor.nil();
                root_1 = (Tree)adaptor.becomeRoot((Tree)adaptor.create(ExpOR, "ExpOR"), root_1);

                adaptor.addChild(root_1, stream_e1.nextTree());
                adaptor.addChild(root_1, stream_e2.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expOR"

    public static class expAND_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expAND"
    // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:21:1: expAND : aritExp relExp -> ^( ExpAND aritExp relExp ) ;
    public final RecParser.expAND_return expAND() throws RecognitionException {
        RecParser.expAND_return retval = new RecParser.expAND_return();
        retval.start = input.LT(1);

        Tree root_0 = null;

        RecParser.aritExp_return aritExp2 = null;

        RecParser.relExp_return relExp3 = null;


        RewriteRuleSubtreeStream stream_aritExp=new RewriteRuleSubtreeStream(adaptor,"rule aritExp");
        RewriteRuleSubtreeStream stream_relExp=new RewriteRuleSubtreeStream(adaptor,"rule relExp");
        try {
            // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:21:9: ( aritExp relExp -> ^( ExpAND aritExp relExp ) )
            // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:21:11: aritExp relExp
            {
            pushFollow(FOLLOW_aritExp_in_expAND142);
            aritExp2=aritExp();

            state._fsp--;

            stream_aritExp.add(aritExp2.getTree());
            pushFollow(FOLLOW_relExp_in_expAND144);
            relExp3=relExp();

            state._fsp--;

            stream_relExp.add(relExp3.getTree());


            // AST REWRITE
            // elements: relExp, aritExp
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Tree)adaptor.nil();
            // 21:27: -> ^( ExpAND aritExp relExp )
            {
                // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:21:30: ^( ExpAND aritExp relExp )
                {
                Tree root_1 = (Tree)adaptor.nil();
                root_1 = (Tree)adaptor.becomeRoot((Tree)adaptor.create(ExpAND, "ExpAND"), root_1);

                adaptor.addChild(root_1, stream_aritExp.nextTree());
                adaptor.addChild(root_1, stream_relExp.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expAND"

    public static class expORPr_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expORPr"
    // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:23:1: expORPr : ( '|' exp -> ^( ExpORPr exp ) | -> ^( ExpORPrEmpty ) );
    public final RecParser.expORPr_return expORPr() throws RecognitionException {
        RecParser.expORPr_return retval = new RecParser.expORPr_return();
        retval.start = input.LT(1);

        Tree root_0 = null;

        Token char_literal4=null;
        RecParser.exp_return exp5 = null;


        Tree char_literal4_tree=null;
        RewriteRuleTokenStream stream_99=new RewriteRuleTokenStream(adaptor,"token 99");
        RewriteRuleSubtreeStream stream_exp=new RewriteRuleSubtreeStream(adaptor,"rule exp");
        try {
            // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:23:10: ( '|' exp -> ^( ExpORPr exp ) | -> ^( ExpORPrEmpty ) )
            int alt1=2;
            alt1 = dfa1.predict(input);
            switch (alt1) {
                case 1 :
                    // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:23:12: '|' exp
                    {
                    char_literal4=(Token)match(input,99,FOLLOW_99_in_expORPr167);  
                    stream_99.add(char_literal4);

                    pushFollow(FOLLOW_exp_in_expORPr169);
                    exp5=exp();

                    state._fsp--;

                    stream_exp.add(exp5.getTree());


                    // AST REWRITE
                    // elements: exp
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Tree)adaptor.nil();
                    // 23:27: -> ^( ExpORPr exp )
                    {
                        // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:23:30: ^( ExpORPr exp )
                        {
                        Tree root_1 = (Tree)adaptor.nil();
                        root_1 = (Tree)adaptor.becomeRoot((Tree)adaptor.create(ExpORPr, "ExpORPr"), root_1);

                        adaptor.addChild(root_1, stream_exp.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:24:11: 
                    {

                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Tree)adaptor.nil();
                    // 24:11: -> ^( ExpORPrEmpty )
                    {
                        // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:24:14: ^( ExpORPrEmpty )
                        {
                        Tree root_1 = (Tree)adaptor.nil();
                        root_1 = (Tree)adaptor.becomeRoot((Tree)adaptor.create(ExpORPrEmpty, "ExpORPrEmpty"), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expORPr"

    public static class expANDPr_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expANDPr"
    // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:26:1: expANDPr : ( '&' exp -> ^( ExpANDPr exp ) | -> ^( ExpANDPrEmpty ) );
    public final RecParser.expANDPr_return expANDPr() throws RecognitionException {
        RecParser.expANDPr_return retval = new RecParser.expANDPr_return();
        retval.start = input.LT(1);

        Tree root_0 = null;

        Token char_literal6=null;
        RecParser.exp_return exp7 = null;


        Tree char_literal6_tree=null;
        RewriteRuleTokenStream stream_100=new RewriteRuleTokenStream(adaptor,"token 100");
        RewriteRuleSubtreeStream stream_exp=new RewriteRuleSubtreeStream(adaptor,"rule exp");
        try {
            // C:\\RaFaeL\\Dropbox\\UNIVERSIDADE\\Mestrado\\[ACS] Análise e Concepção de Software\\[ATS] Análise e Transformação de Software\\Tiger\\parser\\src\\parser\\Rec.g:26:10: ( '&' exp -> ^( ExpANDPr exp ) | -> ^( ExpANDPrEmpty ) )
            int alt2=2;
            alt2 = dfa2.predict(input);
